<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_padding_horizontal"
    android:paddingTop="@dimen/space_lg"
    android:paddingBottom="@dimen/space_xl"
    tools:context=".ui.relatorios.SelecionarRelatorioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecionar_tipo_relatorio"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/text_headline_md"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/space_lg" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ver_relatorios"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_md"
        android:text="@string/ver_relatorios_button"
        android:layout_marginBottom="@dimen/space_sm"
        style="@style/IBF.Button.Secondary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_criar_relatorio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_md"
        android:text="@string/criar_novo_relatorio_button"
        style="@style/IBF.Button.Accent" />

</LinearLayout>